@@ -3,37 +3,31 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<parent>
-		<groupId>org.fringe</groupId>
-		<artifactId>jf-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../jf-parent/pom.xml</relativePath>
-	</parent>
 
 	<name>jf-serializer</name>
 	<description>Json serialization of Java Beans</description>
 	<url>https://github.com/jomarmar/jf-serializer</url>
 
-<!-- 	<issueManagement>
+	<issueManagement>
 		<url>https://github.com/jomarmar/jf-serializer/issues</url>
 		<system>GitHub</system>
-	</issueManagement> -->
+	</issueManagement>
 
-<!-- 	<licenses>
+ 	<licenses>
 		<license>
 			<name>Apache License Version 2.0, January 2004</name>
 			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
 			<distribution>repo</distribution>
 		</license>
-	</licenses> -->
+	</licenses>
 
-	<!-- <scm>
+	<scm>
 		<url>https://github.com/jomarmar/jf-serializer</url>
 		<connection>scm:git:https://github.com/jomarmar/jf-serializer.git</connection>
 		<developerConnection>scm:git:git@github.com:jomarmar/jf-serializer.git</developerConnection>
-	</scm> -->
+	</scm>
 
-	<!-- <developers>
+	<developers>
 		<developer>
 			<id>jomarmar</id>
 			<name>J Martinez</name>
@@ -44,33 +38,42 @@
 			</roles>
 			<timezone>+1</timezone>
 		</developer>
-	</developers> -->
+	</developers>
 
 	
 
 	<groupId>org.fringe</groupId>
 	<artifactId>jf-serializer</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<packaging>bundle</packaging>
+	<packaging>jar</packaging>
 
 	
 	<!-- ##################################################################################################### -->
 	<properties>
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
 		<bundle.symbolicName>org.fringe.jf.json</bundle.symbolicName>
     	<bundle.namespace>org.fringe.jf.json</bundle.namespace>
+
+        <slf4j.version>1.7.7</slf4j.version>
+        <gson.version>2.3.1</gson.version>
+        <junit.version>4.11</junit.version>
 	</properties>
 
 	<build>
 		<plugins>
-			<plugin>
-	  			 <groupId>org.apache.felix</groupId>
-	             <artifactId>maven-bundle-plugin</artifactId>
-	  		</plugin>
-	  		
-	  		<plugin>
-	  			<groupId>org.ops4j</groupId>
-	            <artifactId>maven-pax-plugin</artifactId>
-	        </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18</version>
+                <configuration>
+                    <junitArtifactName>junit:junit</junitArtifactName>
+                    <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
+                        -Dfile.encoding=UTF-8</argLine>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
@@ -80,24 +83,22 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<!-- Basic Dependencies -->
-			<dependency>
-				<groupId>org.osgi</groupId>
-				<artifactId>org.osgi.core</artifactId>
-				<version>${osgi.version}</version>
-				<optional>true</optional>
-			</dependency>
-			<dependency>
-				<groupId>org.osgi</groupId>
-				<artifactId>org.osgi.compendium</artifactId>
-				<version>${osgi.version}</version>
-				<optional>true</optional>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>${slf4j.version}</version>
-			</dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>1.2.17</version>
+            </dependency>
 
 			<dependency>
 				<groupId>junit</groupId>
@@ -116,19 +117,28 @@
 	</dependencyManagement>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.osgi</groupId>
-			<artifactId>org.osgi.core</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.osgi</groupId>
-			<artifactId>org.osgi.compendium</artifactId>
-		</dependency>
-			
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
 		<dependency>
 	      <groupId>com.google.code.gson</groupId>
 	      <artifactId>gson</artifactId>
 	   	</dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 </project>
